# SiAOD

./: CMakeLists.txt  README.md  main.cpp
common/: Arrays.cpp  Arrays.h
hw1/: README  hw1.cpp  hw1.h  main.cpp
hw2/: hw2.cpp  hw2.h  main.cpp
hw3/: README  hw3.cpp  hw3.h
hw4/: hw4.cpp  hw4.h
hw5/: bohr.cpp  bohr.h  hw5.cpp  hw5.h
hw6/: firstFile.txt  hw6.cpp  hw6.h  secondFile.txt  thirdFile.txt
hw7/: hw7.cpp  hw7.h  variantOperatons.cpp  variantOperatons.h
hw8/: Calculator.cpp  Calculator.h  stekOnArray.cpp  stekOnArray.h  stekOnVector.cpp  stekOnVector.h
